--- a/package.json
+++ b/package.json
@@ -1,20 +1,26 @@
 {
   "name": "backend-iii",
   "version": "1.0.0",
-  "description": "Backend III - Entrega N°1",
+  "description": "Backend III - Entrega Final",
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "dev": "nodemon app.js"
+    "dev": "nodemon app.js",
+    "test": "mocha --exit --timeout 30000 test/**/*.test.js"
   },
   "dependencies": {
     "express": "^4.18.2",
     "mongoose": "^7.5.0",
     "bcrypt": "^5.1.1",
-    "faker": "^5.5.3"
+    "faker": "^5.5.3",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "mocha": "^10.2.0",
+    "chai": "^4.3.10",
+    "chai-http": "^4.4.0",
+    "mongodb-memory-server": "^9.1.1"
   }
 }
-
